Update .config directory
1. Support rust language
2. Update my shell and cpp snippets
3. Update colorls icon

--- a/colorls/files.yaml
+++ b/colorls/files.yaml
@@ -37,6 +37,16 @@ jsx: ""
 less: ""
 log: ""
 lua: ""
+lock: ""
+license: ""
+LICENSE: ""
+LICENSE.md: ""
+LICENSE.txt: ""
+Makefile: ""
+makefile: ""
+Makefile.ac: ""
+Makefile.in: ""
+mimeapps.list: ""
 md: ""
 mustache: ""
 npmignore: ""
@@ -47,6 +57,7 @@ ppt: ""
 psd: ""
 py: ""
 r: ""
+rs: ""
 rb: ""
 rdb: ""
 rss: ""
@@ -60,6 +71,7 @@ tex: ""
 ts: ""
 twig: ""
 txt: ""
+toml: ""
 video: ""
 vim: ""
 windows: ""
