--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,7 +22,7 @@ set -g history-limit 10000
 # bind -n M-w run -b 'bash ~/.config/tmux/fzf_panes.tmux new_window'
 
 # reload configuration
-bind r source-file ~/.config/tmux/tmux.conf \; display '~/.tmux.conf sourced'
+bind r source-file ~/.config/tmux/tmux.conf \; display '~/.config/tmux/tmux.conf sourced'
 
 set -ga update-environment '\
 DISPLAY DBUS_SESSION_BUS_ADDRESS \
@@ -116,6 +116,7 @@ bind -r C-j resize-pane -D 3 #M-J
 bind -r C-k resize-pane -U 3 #M-K
 bind -r C-l resize-pane -R 3 #M-L
 
+# copy mode configuration
 set -g status-keys emacs
 set -g mode-keys vi
 
@@ -162,32 +163,66 @@ setw -g pane-border-format '#[bold]#{?#{&&:#{pane_active},#{client_prefix}},#[un
 #set -g pane-border-style fg=magenta
 
 # windows
-set -g status-justify 'centre'
-set -g status-left-length 90
-set -g status-right-length 140
-setw -g window-status-separator ''
+set -g status-justify 'left'
+# set -g status-left-length 90
+# set -g status-right-length 140
+# setw -g window-status-separator ''
 
 # default statusbar colors
-set -g status-bg black
-#set -g status-left ' #[fg=magenta,bold]❐ #S'
-#set -g status-left '#[fg=brightyellow] #{?client_prefix,⌨ ,  }  #[fg=magenta,bold] %Y-%m-%d %H:%M '
-#set -g status-right '#(rainbarf --battery --remaining --bolt --tmux --rgb)'
-#set -g status-left "#[fg=magenta,bold] %Y-%m-%d %H:%M | #[fg=brightblue]#(curl icanhazip.com) #(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-setw -g window-status-format '#[fg=brightblue] #I #W '
-setw -g window-status-current-format '#[fg=magenta,bold] #I #W:#F'
-setw -g window-status-activity-style bg=black
-setw -g window-status-bell-style bg=black
-#set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
+# set -g status-bg default
+# set -g status-left ' #[fg=magenta,bold]❐ #S'
+# set -g status-left '#[fg=brightyellow] #{?client_prefix,⌨ ,  }  #[fg=magenta,bold] %Y-%m-%d %H:%M '
+# set -g status-right '#(rainbarf --battery --remaining --bolt --tmux --rgb)'
+# set -g status-left "#[fg=magenta,bold] %Y-%m-%d %H:%M | #[fg=brightblue]#(curl icanhazip.com) #(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+# setw -g window-status-format '#[fg=brightblue] #I #W '
+# setw -g window-status-current-format '#[fg=magenta,bold] #I #W:#F'
+# setw -g window-status-activity-style bg=black
+# setw -g window-status-bell-style bg=black
+# set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
 
+# set-option -g status-left "#(~/.config/tmux/tmux-powerline/powerline.sh left)"
+# set-option -g status-right "#(~/.config/tmux/tmux-powerline/powerline.sh right)"
+ 
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context, synchronize-panes
+set -g @dracula-plugins "weather network time"
 
-set-option -g status-left "#(~/.config/tmux/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/.config/tmux/tmux-powerline/powerline.sh right)"
+# available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
+# set -g @dracula-[plugin-name]-colors "[background] [foreground]"
+set -g @dracula-tmux-ram-usage-colors "yellow dark_gray"
+
+set -g @dracula-show-powerline true
+
+# for left
+set -g @dracula-show-left-sep 
+
+# for right symbol (can set any symbol you like as seperator)
+set -g @dracula-show-right-sep 
+
+set -g @dracula-show-flags true
+
+set -g @dracula-refresh-rate 100
+
+# it can accept `session`, `smiley`, `window`, or any character.
+set -g @dracula-show-left-icon smiley
+
+set -g @dracula-left-icon-padding 0
+
+set -g @dracula-border-contrast true
+
+# set -g @dracula-fixed-location "Chengdu, China"
+set -g @dracula-show-fahrenheit false
+
+set -g @dracula-show-timezone true
+set -g @dracula-day-month false
+set -g @dracula-military-time true
+
 #---
 set-option default-terminal "tmux-256color"
 set-option -a terminal-overrides ",*256col*:RGB"
+
 # List of plugins
-set -g @plugins 'tmux-plugins/tmp'
+set -g @plugins 'tmux-plugins/tpm'
 set -g @plugins 'tmux-plugins/tmux-sensible'
-set -g @plugins 'erikw/tmux-powerline'
+set -g @plugins 'dracula/tmux'
 
 run '~/.config/tmux/plugins/tpm/tpm'
