--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -184,7 +184,7 @@ set -g status-justify 'left'
 # set-option -g status-right "#(~/.config/tmux/tmux-powerline/powerline.sh right)"
  
 # available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, attached-clients, network-vpn, weather, time, spotify-tui, kubernetes-context, synchronize-panes
-set -g @dracula-plugins "weather network time"
+set -g @dracula-plugins "network time"
 
 # available colors: white, gray, dark_gray, light_purple, dark_purple, cyan, green, orange, red, pink, yellow
 # set -g @dracula-[plugin-name]-colors "[background] [foreground]"
