--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,6 @@
 # cat << EOF > /dev/null
 
 # -- general
-set-option default-path "$PWD"
 
 setw -g xterm-keys on
 set -s escape-time 0
@@ -37,10 +36,6 @@ FZF_DEFAULT_OPTS \
 '
 set-hook -g client-attached 'run -b "cut -c3- ~/.tmux.conf | sh -s update_env_event"'
 
-# -- prefix
-unbind C-b
-set -g prefix 'C-s'
-
 # -- display
 set -g base-index 1
 setw -g pane-base-index 1
@@ -56,105 +51,87 @@ set -g display-time 2000
 set -g status-interval 1
 
 # -- navigation
+# remap prefix
+unbind C-b
+set-option -g prefix C-s
+bind C-s send-prefix
 
 # create session
 bind C-c new-session
 
 # window management
-bind -n M-o new-window -c "#{pane_current_path}"
-bind -n M-O break-pane
-bind -n M-Q kill-pane
+bind -n ø new-window -c "#{pane_current_path}" #M-o
+bind -n ∏ break-pane                           #M-O
+bind -n œ kill-pane                            #M-q
 
-# window navigation
-unbind n
-unbind p
-unbind 1
-unbind 2
-unbind 3
-unbind 4
-unbind 5
-unbind 6
-unbind 7
-unbind 8
-unbind 9
-unbind 0
-bind -r C-p previous-window
-bind -r C-n next-window
+bind -n ‘ previous-window #M-[
+bind -n “ next-window #M-]
 
-bind -n M-1 select-window -t 1
-bind -n M-2 select-window -t 2
-bind -n M-3 select-window -t 3
-bind -n M-4 select-window -t 4
-bind -n M-5 select-window -t 5
-bind -n M-6 select-window -t 6
-bind -n M-7 select-window -t 7
-bind -n M-8 select-window -t 8
-bind -n M-9 select-window -t 9
+# The M-number seems not work for me
+# Use what actually print out instead
+bind -n ¡ select-window -t 1 #M-1
+bind -n ™ select-window -t 2 #M-2
+bind -n £ select-window -t 3 #M-3
+bind -n ¢ select-window -t 4 #M-4
+bind -n ∞ select-window -t 5 #M-5
+bind -n § select-window -t 6 #M-6
+bind -n ¶ select-window -t 7 #M-7
+bind -n • select-window -t 8 #M-8
+bind -n ª select-window -t 9 #M-9
 
+bind -n ⁄ join-pane -t 1 #M-1
+bind -n € join-pane -t 2 #M-2
+bind -n ‹ join-pane -t 3 #M-3
+bind -n › join-pane -t 4 #M-4
+bind -n ﬁ join-pane -t 5 #M-5
+bind -n ﬂ join-pane -t 6 #M-6
+bind -n ‡ join-pane -t 7 #M-7
+bind -n ° join-pane -t 8 #M-8
+bind -n · join-pane -t 9 #M-9
 
-bind -n M-! join-pane -t :1
-bind -n M-@ join-pane -t :2
-bind -n 'M-#' join-pane -t :3
-bind -n 'M-$' join-pane -t :4
-bind -n M-% join-pane -t :5
-bind -n M-^ join-pane -t :6
-bind -n M-& join-pane -t :7
-bind -n M-* join-pane -t :8
-bind -n M-( join-pane -t :9
-
-bind u split-window -vb -c "#{pane_current_path}"
+bind k split-window -vb -c "#{pane_current_path}"
 bind j split-window -v -c "#{pane_current_path}"
 bind h split-window -hb -c "#{pane_current_path}"
-bind k split-window -h -c "#{pane_current_path}"
+bind l split-window -h -c "#{pane_current_path}"
 
-bind -n M-f resize-pane -Z
+bind -n ƒ resize-pane -Z
 
 # pane navigation
-bind 1 select-pane -t:.1
-bind 2 select-pane -t:.2
-bind 3 select-pane -t:.3
-bind 4 select-pane -t:.4
-bind 5 select-pane -t:.5
-bind 6 select-pane -t:.6
-bind 7 select-pane -t:.7
-bind 8 select-pane -t:.8
-bind 9 select-pane -t:.9
-bind 0 select-pane -t:.10
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-u select-pane -U
-bind -n M-k select-pane -R
+bind -n ˙ select-pane -L # M-h
+bind -n ∆ select-pane -D # M-j
+bind -n ˚ select-pane -U # M-k
+bind -n ¬ select-pane -R # M-l
 bind > swap-pane -D
 bind < swap-pane -U
 bind | swap-pane
-bind -n M-Space next-layout
+bind -n   next-layout #M-Space
 
 bind W choose-tree -Z
 bind S choose-tree 'move-pane -v -s "%%"'
 bind V choose-tree 'move-pane -h -s "%%"'
 
 # pane resizing
-bind -n M-N resize-pane -L 3
-bind -n M-E resize-pane -D 3
-bind -n M-U resize-pane -U 3
-bind -n M-I resize-pane -R 3
+bind -r C-h resize-pane -L 3 #M-H
+bind -r C-j resize-pane -D 3 #M-J
+bind -r C-k resize-pane -U 3 #M-K
+bind -r C-l resize-pane -R 3 #M-L
 
 set -g status-keys emacs
 set -g mode-keys vi
 
-bind -n M-v copy-mode
+bind -n √ copy-mode # M-v
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind -T copy-mode-vi h send-keys -X cursor-left
-bind -T copy-mode-vi k send-keys -X cursor-right
-bind -T copy-mode-vi u send-keys -X cursor-up
+bind -T copy-mode-vi l send-keys -X cursor-right
+bind -T copy-mode-vi k send-keys -X cursor-up
 bind -T copy-mode-vi j send-keys -X cursor-down
 bind -T copy-mode-vi w send-keys -X next-word-end
-bind -T copy-mode-vi U send-keys -N 5 -X cursor-up
+bind -T copy-mode-vi K send-keys -N 5 -X cursor-up
 bind -T copy-mode-vi J send-keys -N 5 -X cursor-down
 bind -T copy-mode-vi H send-keys -X start-of-line
-bind -T copy-mode-vi K send-keys -X end-of-line
+bind -T copy-mode-vi L send-keys -X end-of-line
 bind -T copy-mode-vi Y send-keys -X copy-end-of-line
 bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind -T copy-mode-vi = send-keys -X search-again
