--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,8 +53,8 @@ set -g status-interval 1
 # -- navigation
 # remap prefix
 unbind C-b
-set-option -g prefix C-s
-bind C-s send-prefix
+set-option -g prefix C-a
+bind C-a send-prefix
 
 # create session
 bind C-c new-session
