Restore tmux prefix key binding
1. Reuse <c-s> as the prefix key for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,15 +79,15 @@ bind -n ¶ select-window -t 7 #M-7
 bind -n • select-window -t 8 #M-8
 bind -n ª select-window -t 9 #M-9
 
-bind -n ⁄ join-pane -t 1 #M-1
-bind -n € join-pane -t 2 #M-2
-bind -n ‹ join-pane -t 3 #M-3
-bind -n › join-pane -t 4 #M-4
-bind -n ﬁ join-pane -t 5 #M-5
-bind -n ﬂ join-pane -t 6 #M-6
-bind -n ‡ join-pane -t 7 #M-7
-bind -n ° join-pane -t 8 #M-8
-bind -n · join-pane -t 9 #M-9
+bind -n ⁄ join-pane -t 1 #M-!
+bind -n € join-pane -t 2 #M-@
+bind -n ‹ join-pane -t 3 #M-#
+bind -n › join-pane -t 4 #M-$
+bind -n ﬁ join-pane -t 5 #M-%
+bind -n ﬂ join-pane -t 6 #M-^
+bind -n ‡ join-pane -t 7 #M-&
+bind -n ° join-pane -t 8 #M-*
+bind -n · join-pane -t 9 #M-(
 
 bind k split-window -vb -c "#{pane_current_path}"
 bind j split-window -v -c "#{pane_current_path}"
